--- a/css/menuBurg.css
+++ b/css/menuBurg.css
@@ -353,7 +353,7 @@
 #mob-menu__button {
   display: block;
   position: relative;
-  margin: auto auto;
+  margin: auto;
   text-align: center;
   width: 45px;
   height: 40px;
@@ -426,13 +426,16 @@
 }
 
 #mob-menu__button {
-  position: absolute;
-  right: 30px;
+  margin-right: 0;
 }
 @media (min-width: 780px) {
   #mob-menu__button {
     display: none;
   }
+}
+#mob-menu__button .mob-menu__text {
+  font-family: Ubuntu;
+  line-height: 100%;
 }
 
 @media (max-width: 780px) {
@@ -445,7 +448,7 @@
   }
   .header__menu {
     width: 100%;
-    height: 50%;
+    height: auto;
     position: fixed;
     left: 0;
     right: 0;
